--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <html>
     <head>
         <title>SE Factory - Empowering Youth With Tech Jobs</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
 
     <body>
         <!--First section-->
         <div class="head">
 
-            <div class="im-with-nav">
-                <img src="assets/se-logo.png" height="10%" width="10%">
+            <div class="row">
+                <div class="col-1"><img src="assets/se-logo.png" class="img-fluid"></div>
 
-                <div class="topnav">
+                <div class="col-6 offset-5">
                     <a class="active" href="#home">Home</a>
                     <a href="#news">Get Trained</a>
                     <a href="#contact">Hire Talent</a>
@@ -21,12 +24,9 @@
                     <a href="#Contact">Contact</a>
                     <a href="#apply-now" class= "applynow">Apply Now</a>
                 </div>
-
-                <!--Hamburger bun for mobile-->
-                <a href="#bun" class="bun"><img src="assets/bun.png" width="50%" height="50%"></a>
             </div>
 
-            <div class="intro">
+            <div class="col-3 margining">
                 <h1>
                     <strong>Empowering youth</strong><br>
                     with tech jobs.
